# hasql-servant-example

./: myproj.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/b9bb6ddb/: cabal_macros.h
.stack-work/ghci/f2a8c5af/: cabal_macros.h
.stack-work/ghci/fce680b2/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/lib/x86_64-linux-ghc-8.8.3/myproj-0.1.0.0-6ncgKxCSaBE7OsbuZAfQu/: Lib.dyn_hi
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/lib/x86_64-linux-ghc-8.8.3/myproj-0.1.0.0-Ati8iPTSqpHDr5GgVFI2un/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/lib/x86_64-linux-ghc-8.8.3/myproj-0.1.0.0-KqnHE2OtOvlPWjP3rkyjD/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/lib/x86_64-linux-ghc-8.8.3/myproj-0.1.0.0-LUZNflUb7z25Tpa6n7dJLV/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/lib/x86_64-linux-ghc-8.8.3/myproj-0.1.0.0-cYkZJDpHsL7MUXL2ZAmdN/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/89e4559ef73e3e5ebfe31cfdcdb98d7be840d8e5d588f8595ef2a56ea5417019/8.8.3/pkgdb/: myproj-0.1.0.0-6ncgKxCSaBE7OsbuZAfQu.conf  package.cache
dist-newstyle/cache/: compiler  config
src/: .#Lib.hs  Lib.hs
